# keyless-vanity-substrate

./: Cargo.toml  Makefile
demo/: index.html  vanity.js  vanity_bg.wasm
src/: lib.rs
